// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RequestGenerator > all false  getFullText 1`] = `
"import type { Pet } from "./pet.type";
import type { AxiosResponse } from "axios";
import { request } from "@/utils/request";
import type { AxiosRequestConfig } from "axios";

/**
 * @tag pet
 * @description Everything about your Pets
 */
class PetService {
    /**
     * @summary summary
     */
    async testPost(data: Pet.TestPostMutationRequest, requestConfig?: Partial<AxiosRequestConfig<Pet.TestPostMutationRequest>>) {
        const res = await request<Pet.TestPostMutationResponse, AxiosResponse<Pet.TestPostMutationResponse>, Pet.TestPostMutationRequest>({
            method: 'POST',
            url: \`/pet/test\`,
            data,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary summary
     */
    async testPut(data: Pet.TestPutMutationRequest, requestConfig?: Partial<AxiosRequestConfig<Pet.TestPutMutationRequest>>) {
        const res = await request<Pet.TestPutMutationResponse, AxiosResponse<Pet.TestPutMutationResponse>, Pet.TestPutMutationRequest>({
            method: 'PUT',
            url: \`/pet/test\`,
            data,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary summary
     */
    async delByTest(data: Pet.DelByTestMutationRequest, requestConfig?: Partial<AxiosRequestConfig<Pet.DelByTestMutationRequest>>) {
        const res = await request<Pet.DelByTestMutationResponse, AxiosResponse<Pet.DelByTestMutationResponse>, Pet.DelByTestMutationRequest>({
            method: 'DELETE',
            url: \`/pet/test\`,
            data,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary summary
     */
    async testIdGet(testId: Pet.TestIdGetPathParams['testId'], params?: Pet.TestIdGetQueryParams, requestConfig?: Partial<AxiosRequestConfig>) {
        const res = await request<Pet.TestIdGetQueryResponse, AxiosResponse<Pet.TestIdGetQueryResponse>, unknown>({
            method: 'GET',
            url: \`/pet/test/\${testId}\`,
            params,
            ...requestConfig,
            paramsSerializer(params: Pet.TestIdGetQueryParams) {
                return qs.stringify(params)
            }
        })
        return res.data
    }

    /**
     * @summary uploads an image
     * @description pet
     */
    async uploadImagePost(petId: Pet.UploadImagePostPathParams['petId'], data: Pet.UploadImagePostMutationRequest, requestConfig?: Partial<AxiosRequestConfig<Pet.UploadImagePostMutationRequest>>) {
        const res = await request<Pet.UploadImagePostMutationResponse, AxiosResponse<Pet.UploadImagePostMutationResponse>, Pet.UploadImagePostMutationRequest>({
            method: 'POST',
            headers: {
                'Content-Type': 'multipart/form-data'
            },
            url: \`/pet/\${petId}/uploadImage\`,
            data,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Add a new pet to the store
     */
    async create(data: Pet.CreateMutationRequest, requestConfig?: Partial<AxiosRequestConfig<Pet.CreateMutationRequest>>) {
        const res = await request<Pet.CreateMutationResponse, AxiosResponse<Pet.CreateMutationResponse>, Pet.CreateMutationRequest>({
            method: 'POST',
            url: \`/pet\`,
            data,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Update an existing pet
     */
    async update(data: Pet.UpdateMutationRequest, requestConfig?: Partial<AxiosRequestConfig<Pet.UpdateMutationRequest>>) {
        const res = await request<Pet.UpdateMutationResponse, AxiosResponse<Pet.UpdateMutationResponse>, Pet.UpdateMutationRequest>({
            method: 'PUT',
            url: \`/pet\`,
            data,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Finds Pets by status
     * @description Multiple status values can be provided with comma separated strings
     */
    async findByStatusGet(params: Pet.FindByStatusGetQueryParams, requestConfig?: Partial<AxiosRequestConfig>) {
        const res = await request<Pet.FindByStatusGetQueryResponse, AxiosResponse<Pet.FindByStatusGetQueryResponse>, unknown>({
            method: 'GET',
            url: \`/pet/findByStatus\`,
            params,
            ...requestConfig,
            paramsSerializer(params: Pet.FindByStatusGetQueryParams) {
                return qs.stringify(params)
            }
        })
        return res.data
    }

    /**
     * @summary Finds Pets by tags
     * @description Multiple tags can be provided with comma separated strings. Use tag1, tag2, tag3 for testing.
     */
    async findByTagsGet(params: Pet.FindByTagsGetQueryParams, requestConfig?: Partial<AxiosRequestConfig>) {
        const res = await request<Pet.FindByTagsGetQueryResponse, AxiosResponse<Pet.FindByTagsGetQueryResponse>, unknown>({
            method: 'GET',
            url: \`/pet/findByTags\`,
            params,
            ...requestConfig,
            paramsSerializer(params: Pet.FindByTagsGetQueryParams) {
                return qs.stringify(params)
            }
        })
        return res.data
    }

    /**
     * @summary Find pet by ID
     * @description Returns a single pet
     */
    async findByPetId(petId: Pet.FindByPetIdPathParams['petId'], requestConfig?: Partial<AxiosRequestConfig>) {
        const res = await request<Pet.FindByPetIdQueryResponse, AxiosResponse<Pet.FindByPetIdQueryResponse>, unknown>({
            method: 'GET',
            url: \`/pet/\${petId}\`,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Updates a pet in the store with form data
     */
    async petIdPost(petId: Pet.PetIdPostPathParams['petId'], data: Pet.PetIdPostMutationRequest, requestConfig?: Partial<AxiosRequestConfig<Pet.PetIdPostMutationRequest>>) {
        const res = await request<Pet.PetIdPostMutationResponse, AxiosResponse<Pet.PetIdPostMutationResponse>, Pet.PetIdPostMutationRequest>({
            method: 'POST',
            headers: {
                'Content-Type': 'application/x-www-form-urlencoded'
            },
            url: \`/pet/\${petId}\`,
            data,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Deletes a pet
     */
    async delByPetId(petId: Pet.DelByPetIdPathParams['petId'], requestConfig?: Partial<AxiosRequestConfig>) {
        const res = await request<Pet.DelByPetIdMutationResponse, AxiosResponse<Pet.DelByPetIdMutationResponse>, unknown>({
            method: 'DELETE',
            url: \`/pet/\${petId}\`,
            ...requestConfig
        })
        return res.data
    }
}

export const petService = new PetService;

import type { Store } from "./store.type";
import type { AxiosResponse } from "axios";
import { request } from "@/utils/request";
import type { AxiosRequestConfig } from "axios";

/**
 * @tag store
 * @description Access to Petstore orders
 */
class StoreService {
    /**
     * @summary Place an order for a pet
     */
    async create(data: Store.CreateMutationRequest, requestConfig?: Partial<AxiosRequestConfig<Store.CreateMutationRequest>>) {
        const res = await request<Store.CreateMutationResponse, AxiosResponse<Store.CreateMutationResponse>, Store.CreateMutationRequest>({
            method: 'POST',
            url: \`/store/order\`,
            data,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Find purchase order by ID
     * @description For valid response try integer IDs with value >= 1 and <= 10. Other values will generated exceptions
     */
    async findByOrderId(orderId: Store.FindByOrderIdPathParams['orderId'], requestConfig?: Partial<AxiosRequestConfig>) {
        const res = await request<Store.FindByOrderIdQueryResponse, AxiosResponse<Store.FindByOrderIdQueryResponse>, unknown>({
            method: 'GET',
            url: \`/store/order/\${orderId}\`,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Delete purchase order by ID
     * @description For valid response try integer IDs with positive integer value. Negative or non-integer values will generate API errors
     */
    async delByOrderId(orderId: Store.DelByOrderIdPathParams['orderId'], requestConfig?: Partial<AxiosRequestConfig>) {
        const res = await request<Store.DelByOrderIdMutationResponse, AxiosResponse<Store.DelByOrderIdMutationResponse>, unknown>({
            method: 'DELETE',
            url: \`/store/order/\${orderId}\`,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Returns pet inventories by status
     * @description Returns a map of status codes to quantities
     */
    async inventoryGet(requestConfig?: Partial<AxiosRequestConfig>) {
        const res = await request<Store.InventoryGetQueryResponse, AxiosResponse<Store.InventoryGetQueryResponse>, unknown>({
            method: 'GET',
            url: \`/store/inventory\`,
            ...requestConfig
        })
        return res.data
    }
}

export const storeService = new StoreService;

import type { User } from "./user.type";
import type { AxiosResponse } from "axios";
import { request } from "@/utils/request";
import type { AxiosRequestConfig } from "axios";

/**
 * @tag user
 * @description Operations about user
 */
class UserService {
    /**
     * @summary Creates list of users with given input array
     */
    async createWithArrayPost(data: User.CreateWithArrayPostMutationRequest, requestConfig?: Partial<AxiosRequestConfig<User.CreateWithArrayPostMutationRequest>>) {
        const res = await request<User.CreateWithArrayPostMutationResponse, AxiosResponse<User.CreateWithArrayPostMutationResponse>, User.CreateWithArrayPostMutationRequest>({
            method: 'POST',
            url: \`/user/createWithArray\`,
            data,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Creates list of users with given input array
     */
    async createWithListPost(data: User.CreateWithListPostMutationRequest, requestConfig?: Partial<AxiosRequestConfig<User.CreateWithListPostMutationRequest>>) {
        const res = await request<User.CreateWithListPostMutationResponse, AxiosResponse<User.CreateWithListPostMutationResponse>, User.CreateWithListPostMutationRequest>({
            method: 'POST',
            url: \`/user/createWithList\`,
            data,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Get user by user name
     */
    async findByUsername(username: User.FindByUsernamePathParams['username'], requestConfig?: Partial<AxiosRequestConfig>) {
        const res = await request<User.FindByUsernameQueryResponse, AxiosResponse<User.FindByUsernameQueryResponse>, unknown>({
            method: 'GET',
            url: \`/user/\${username}\`,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Updated user
     * @description This can only be done by the logged in user.
     */
    async usernamePut(username: User.UsernamePutPathParams['username'], data: User.UsernamePutMutationRequest, requestConfig?: Partial<AxiosRequestConfig<User.UsernamePutMutationRequest>>) {
        const res = await request<User.UsernamePutMutationResponse, AxiosResponse<User.UsernamePutMutationResponse>, User.UsernamePutMutationRequest>({
            method: 'PUT',
            url: \`/user/\${username}\`,
            data,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Delete user
     * @description This can only be done by the logged in user.
     */
    async delByUsername(username: User.DelByUsernamePathParams['username'], requestConfig?: Partial<AxiosRequestConfig>) {
        const res = await request<User.DelByUsernameMutationResponse, AxiosResponse<User.DelByUsernameMutationResponse>, unknown>({
            method: 'DELETE',
            url: \`/user/\${username}\`,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Logs user into the system
     */
    async loginGet(params: User.LoginGetQueryParams, requestConfig?: Partial<AxiosRequestConfig>) {
        const res = await request<User.LoginGetQueryResponse, AxiosResponse<User.LoginGetQueryResponse>, unknown>({
            method: 'GET',
            url: \`/user/login\`,
            params,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Logs out current logged in user session
     */
    async logoutGet(requestConfig?: Partial<AxiosRequestConfig>) {
        const res = await request<User.LogoutGetQueryResponse, AxiosResponse<User.LogoutGetQueryResponse>, unknown>({
            method: 'GET',
            url: \`/user/logout\`,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Create user
     * @description This can only be done by the logged in user.
     */
    async create(data: User.CreateMutationRequest, requestConfig?: Partial<AxiosRequestConfig<User.CreateMutationRequest>>) {
        const res = await request<User.CreateMutationResponse, AxiosResponse<User.CreateMutationResponse>, User.CreateMutationRequest>({
            method: 'POST',
            url: \`/user\`,
            data,
            ...requestConfig
        })
        return res.data
    }
}

export const userService = new UserService;
"
`;

exports[`RequestGenerator > all true getFullText 1`] = `
"import { newPetZod } from "./newPetZod";
import { paramsZodSchema, responseZodSchema, ZodValidation } from "./newZod";
import type { newPet } from "./newPetZod";
import type { newPet } from "./newPetZod";
import type { AxiosResponse } from "axios";
import { request } from "./newRequest";
import type { CustomRequestConfig } from "custom-request";

/**
 * @tag pet
 * @description Everything about your Pets
 * @UUID API-pet
 */
class NewPetAPI {
    /**
     * @summary summary
     * @UUID test
     */
    @ZodValidation
    @responseZodSchema(newPetZod.testPostMutationResponse)
    async newtestPost(@paramsZodSchema(newPetZod.testPostMutationRequest) data: newPet.TestPostMutationRequest, requestConfig?: Partial<CustomRequestConfig>) {
        const res = await request<newPet.TestPostMutationResponse, AxiosResponse<newPet.TestPostMutationResponse>, newPet.TestPostMutationRequest>({
            method: 'POST',
            url: \`/pet/test\`,
            data,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary summary
     * @UUID testput
     */
    @ZodValidation
    @responseZodSchema(newPetZod.testPutMutationResponse)
    async newtestPut(@paramsZodSchema(newPetZod.testPutMutationRequest) data: newPet.TestPutMutationRequest, requestConfig?: Partial<CustomRequestConfig>) {
        const res = await request<newPet.TestPutMutationResponse, AxiosResponse<newPet.TestPutMutationResponse>, newPet.TestPutMutationRequest>({
            method: 'PUT',
            url: \`/pet/test\`,
            data,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary summary
     * @UUID testdelete
     */
    @ZodValidation
    @responseZodSchema(newPetZod.delByTestMutationResponse)
    async newdelByTest(@paramsZodSchema(newPetZod.delByTestMutationRequest) data: newPet.DelByTestMutationRequest, requestConfig?: Partial<CustomRequestConfig>) {
        const res = await request<newPet.DelByTestMutationResponse, AxiosResponse<newPet.DelByTestMutationResponse>, newPet.DelByTestMutationRequest>({
            method: 'DELETE',
            url: \`/pet/test\`,
            data,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary summary
     * @UUID test-idget
     */
    @ZodValidation
    @responseZodSchema(newPetZod.testIdGetQueryResponse)
    async newtestIdGet(@paramsZodSchema(newPetZod.testIdGetPathParams.shape.testId) testId: newPet.TestIdGetPathParams['testId'], @paramsZodSchema(newPetZod.testIdGetQueryParams) params?: newPet.TestIdGetQueryParams, requestConfig?: Partial<CustomRequestConfig>) {
        const res = await request<newPet.TestIdGetQueryResponse, AxiosResponse<newPet.TestIdGetQueryResponse>, unknown>({
            method: 'GET',
            url: \`/pet/test/\${testId}\`,
            params,
            ...requestConfig,
            paramsSerializer(params: newPet.TestIdGetQueryParams) {
                return qs.stringify(params);
            }
        })
        return res.data
    }

    /**
     * @summary uploads an image
     * @description pet
     * @UUID uploadFile
     */
    @ZodValidation
    @responseZodSchema(newPetZod.uploadImagePostMutationResponse)
    async newuploadImagePost(@paramsZodSchema(newPetZod.uploadImagePostPathParams.shape.petId) petId: newPet.UploadImagePostPathParams['petId'], @paramsZodSchema(newPetZod.uploadImagePostMutationRequest) data: newPet.UploadImagePostMutationRequest, requestConfig?: Partial<CustomRequestConfig>) {
        const res = await request<newPet.UploadImagePostMutationResponse, AxiosResponse<newPet.UploadImagePostMutationResponse>, newPet.UploadImagePostMutationRequest>({
            method: 'POST',
            headers: {
                'Content-Type': 'multipart/form-data'
            },
            url: \`/pet/\${petId}/uploadImage\`,
            data,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Add a new pet to the store
     * @UUID addPet
     */
    @ZodValidation
    @responseZodSchema(newPetZod.createMutationResponse)
    async newcreate(@paramsZodSchema(newPetZod.createMutationRequest) data: newPet.CreateMutationRequest, requestConfig?: Partial<CustomRequestConfig>) {
        const res = await request<newPet.CreateMutationResponse, AxiosResponse<newPet.CreateMutationResponse>, newPet.CreateMutationRequest>({
            method: 'POST',
            url: \`/pet\`,
            data,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Update an existing pet
     * @UUID updatePet
     */
    @ZodValidation
    @responseZodSchema(newPetZod.updateMutationResponse)
    async newupdate(@paramsZodSchema(newPetZod.updateMutationRequest) data: newPet.UpdateMutationRequest, requestConfig?: Partial<CustomRequestConfig>) {
        const res = await request<newPet.UpdateMutationResponse, AxiosResponse<newPet.UpdateMutationResponse>, newPet.UpdateMutationRequest>({
            method: 'PUT',
            url: \`/pet\`,
            data,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Finds Pets by status
     * @description Multiple status values can be provided with comma separated strings
     * @UUID findPetsByStatus
     */
    @ZodValidation
    @responseZodSchema(newPetZod.findByStatusGetQueryResponse)
    async newfindByStatusGet(@paramsZodSchema(newPetZod.findByStatusGetQueryParams) params: newPet.FindByStatusGetQueryParams, requestConfig?: Partial<CustomRequestConfig>) {
        const res = await request<newPet.FindByStatusGetQueryResponse, AxiosResponse<newPet.FindByStatusGetQueryResponse>, unknown>({
            method: 'GET',
            url: \`/pet/findByStatus\`,
            params,
            ...requestConfig,
            paramsSerializer(params: newPet.FindByStatusGetQueryParams) {
                return qs.stringify(params);
            }
        })
        return res.data
    }

    /**
     * @summary Finds Pets by tags
     * @description Multiple tags can be provided with comma separated strings. Use tag1, tag2, tag3 for testing.
     * @UUID findPetsByTags
     */
    @ZodValidation
    @responseZodSchema(newPetZod.findByTagsGetQueryResponse)
    async newfindByTagsGet(@paramsZodSchema(newPetZod.findByTagsGetQueryParams) params: newPet.FindByTagsGetQueryParams, requestConfig?: Partial<CustomRequestConfig>) {
        const res = await request<newPet.FindByTagsGetQueryResponse, AxiosResponse<newPet.FindByTagsGetQueryResponse>, unknown>({
            method: 'GET',
            url: \`/pet/findByTags\`,
            params,
            ...requestConfig,
            paramsSerializer(params: newPet.FindByTagsGetQueryParams) {
                return qs.stringify(params);
            }
        })
        return res.data
    }

    /**
     * @summary Find pet by ID
     * @description Returns a single pet
     * @UUID getPetById
     */
    @ZodValidation
    @responseZodSchema(newPetZod.findByPetIdQueryResponse)
    async newfindByPetId(@paramsZodSchema(newPetZod.findByPetIdPathParams.shape.petId) petId: newPet.FindByPetIdPathParams['petId'], requestConfig?: Partial<CustomRequestConfig>) {
        const res = await request<newPet.FindByPetIdQueryResponse, AxiosResponse<newPet.FindByPetIdQueryResponse>, unknown>({
            method: 'GET',
            url: \`/pet/\${petId}\`,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Updates a pet in the store with form data
     * @UUID updatePetWithForm
     */
    @ZodValidation
    @responseZodSchema(newPetZod.petIdPostMutationResponse)
    async newpetIdPost(@paramsZodSchema(newPetZod.petIdPostPathParams.shape.petId) petId: newPet.PetIdPostPathParams['petId'], @paramsZodSchema(newPetZod.petIdPostMutationRequest) data: newPet.PetIdPostMutationRequest, requestConfig?: Partial<CustomRequestConfig>) {
        const res = await request<newPet.PetIdPostMutationResponse, AxiosResponse<newPet.PetIdPostMutationResponse>, newPet.PetIdPostMutationRequest>({
            method: 'POST',
            headers: {
                'Content-Type': 'application/x-www-form-urlencoded'
            },
            url: \`/pet/\${petId}\`,
            data,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Deletes a pet
     * @UUID deletePet
     */
    @ZodValidation
    @responseZodSchema(newPetZod.delByPetIdMutationResponse)
    async newdelByPetId(@paramsZodSchema(newPetZod.delByPetIdPathParams.shape.petId) petId: newPet.DelByPetIdPathParams['petId'], requestConfig?: Partial<CustomRequestConfig>) {
        const res = await request<newPet.DelByPetIdMutationResponse, AxiosResponse<newPet.DelByPetIdMutationResponse>, unknown>({
            method: 'DELETE',
            url: \`/pet/\${petId}\`,
            ...requestConfig
        })
        return res.data
    }
}

export const newPetAPI = new NewPetAPI;

import { newPetZod } from "./newPetZod";
import { paramsZodSchema, responseZodSchema, ZodValidation } from "./test/zod";
import type { newPet } from "./newPetZod";
import type { newPet } from "./newPet";
import type { AxiosResponse } from "axios";
import { request } from "./test/request";
import type { CustomRequestConfig } from "custom-request";

/**
 * @tag store
 * @description Access to Petstore orders
 * @UUID API-store
 */
class StoreService {
    /**
     * @summary Place an order for a pet
     * @UUID placeOrder
     */
    @ZodValidation
    @responseZodSchema(newPetZod.createMutationResponse)
    async create(@paramsZodSchema(newPetZod.createMutationRequest) data: newPet.CreateMutationRequest, requestConfig?: Partial<CustomRequestConfig>) {
        const res = await request<newPet.CreateMutationResponse, AxiosResponse<newPet.CreateMutationResponse>, newPet.CreateMutationRequest>({
            method: 'POST',
            url: \`/store/order\`,
            data,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Find purchase order by ID
     * @description For valid response try integer IDs with value >= 1 and <= 10. Other values will generated exceptions
     * @UUID getOrderById
     */
    @ZodValidation
    @responseZodSchema(newPetZod.findByOrderIdQueryResponse)
    async findByOrderId(@paramsZodSchema(newPetZod.findByOrderIdPathParams.shape.orderId) orderId: newPet.FindByOrderIdPathParams['orderId'], requestConfig?: Partial<CustomRequestConfig>) {
        const res = await request<newPet.FindByOrderIdQueryResponse, AxiosResponse<newPet.FindByOrderIdQueryResponse>, unknown>({
            method: 'GET',
            url: \`/store/order/\${orderId}\`,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Delete purchase order by ID
     * @description For valid response try integer IDs with positive integer value. Negative or non-integer values will generate API errors
     * @UUID deleteOrder
     */
    @ZodValidation
    @responseZodSchema(newPetZod.delByOrderIdMutationResponse)
    async delByOrderId(@paramsZodSchema(newPetZod.delByOrderIdPathParams.shape.orderId) orderId: newPet.DelByOrderIdPathParams['orderId'], requestConfig?: Partial<CustomRequestConfig>) {
        const res = await request<newPet.DelByOrderIdMutationResponse, AxiosResponse<newPet.DelByOrderIdMutationResponse>, unknown>({
            method: 'DELETE',
            url: \`/store/order/\${orderId}\`,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Returns pet inventories by status
     * @description Returns a map of status codes to quantities
     * @UUID getInventory
     */
    @ZodValidation
    @responseZodSchema(newPetZod.inventoryGetQueryResponse)
    async inventoryGet(requestConfig?: Partial<CustomRequestConfig>) {
        const res = await request<newPet.InventoryGetQueryResponse, AxiosResponse<newPet.InventoryGetQueryResponse>, unknown>({
            method: 'GET',
            url: \`/store/inventory\`,
            ...requestConfig
        })
        return res.data
    }
}

export const storeService = new StoreService;

import { newPetZod } from "./newPetZod";
import { paramsZodSchema, responseZodSchema, ZodValidation } from "./test/zod";
import type { newPet } from "./newPetZod";
import type { newPet } from "./newPet";
import type { AxiosResponse } from "axios";
import { request } from "./test/request";
import type { CustomRequestConfig } from "custom-request";

/**
 * @tag user
 * @description Operations about user
 * @UUID API-user
 */
class UserService {
    /**
     * @summary Creates list of users with given input array
     * @UUID createUsersWithArrayInput
     */
    @ZodValidation
    @responseZodSchema(newPetZod.createWithArrayPostMutationResponse)
    async createWithArrayPost(@paramsZodSchema(newPetZod.createWithArrayPostMutationRequest) data: newPet.CreateWithArrayPostMutationRequest, requestConfig?: Partial<CustomRequestConfig>) {
        const res = await request<newPet.CreateWithArrayPostMutationResponse, AxiosResponse<newPet.CreateWithArrayPostMutationResponse>, newPet.CreateWithArrayPostMutationRequest>({
            method: 'POST',
            url: \`/user/createWithArray\`,
            data,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Creates list of users with given input array
     * @UUID createUsersWithListInput
     */
    @ZodValidation
    @responseZodSchema(newPetZod.createWithListPostMutationResponse)
    async createWithListPost(@paramsZodSchema(newPetZod.createWithListPostMutationRequest) data: newPet.CreateWithListPostMutationRequest, requestConfig?: Partial<CustomRequestConfig>) {
        const res = await request<newPet.CreateWithListPostMutationResponse, AxiosResponse<newPet.CreateWithListPostMutationResponse>, newPet.CreateWithListPostMutationRequest>({
            method: 'POST',
            url: \`/user/createWithList\`,
            data,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Get user by user name
     * @UUID getUserByName
     */
    @ZodValidation
    @responseZodSchema(newPetZod.findByUsernameQueryResponse)
    async findByUsername(@paramsZodSchema(newPetZod.findByUsernamePathParams.shape.username) username: newPet.FindByUsernamePathParams['username'], requestConfig?: Partial<CustomRequestConfig>) {
        const res = await request<newPet.FindByUsernameQueryResponse, AxiosResponse<newPet.FindByUsernameQueryResponse>, unknown>({
            method: 'GET',
            url: \`/user/\${username}\`,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Updated user
     * @description This can only be done by the logged in user.
     * @UUID updateUser
     */
    @ZodValidation
    @responseZodSchema(newPetZod.usernamePutMutationResponse)
    async usernamePut(@paramsZodSchema(newPetZod.usernamePutPathParams.shape.username) username: newPet.UsernamePutPathParams['username'], @paramsZodSchema(newPetZod.usernamePutMutationRequest) data: newPet.UsernamePutMutationRequest, requestConfig?: Partial<CustomRequestConfig>) {
        const res = await request<newPet.UsernamePutMutationResponse, AxiosResponse<newPet.UsernamePutMutationResponse>, newPet.UsernamePutMutationRequest>({
            method: 'PUT',
            url: \`/user/\${username}\`,
            data,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Delete user
     * @description This can only be done by the logged in user.
     * @UUID deleteUser
     */
    @ZodValidation
    @responseZodSchema(newPetZod.delByUsernameMutationResponse)
    async delByUsername(@paramsZodSchema(newPetZod.delByUsernamePathParams.shape.username) username: newPet.DelByUsernamePathParams['username'], requestConfig?: Partial<CustomRequestConfig>) {
        const res = await request<newPet.DelByUsernameMutationResponse, AxiosResponse<newPet.DelByUsernameMutationResponse>, unknown>({
            method: 'DELETE',
            url: \`/user/\${username}\`,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Logs user into the system
     * @UUID loginUser
     */
    @ZodValidation
    @responseZodSchema(newPetZod.loginGetQueryResponse)
    async loginGet(@paramsZodSchema(newPetZod.loginGetQueryParams) params: newPet.LoginGetQueryParams, requestConfig?: Partial<CustomRequestConfig>) {
        const res = await request<newPet.LoginGetQueryResponse, AxiosResponse<newPet.LoginGetQueryResponse>, unknown>({
            method: 'GET',
            url: \`/user/login\`,
            params,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Logs out current logged in user session
     * @UUID logoutUser
     */
    @ZodValidation
    @responseZodSchema(newPetZod.logoutGetQueryResponse)
    async logoutGet(requestConfig?: Partial<CustomRequestConfig>) {
        const res = await request<newPet.LogoutGetQueryResponse, AxiosResponse<newPet.LogoutGetQueryResponse>, unknown>({
            method: 'GET',
            url: \`/user/logout\`,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Create user
     * @description This can only be done by the logged in user.
     * @UUID createUser
     */
    @ZodValidation
    @responseZodSchema(newPetZod.createMutationResponse)
    async create(@paramsZodSchema(newPetZod.createMutationRequest) data: newPet.CreateMutationRequest, requestConfig?: Partial<CustomRequestConfig>) {
        const res = await request<newPet.CreateMutationResponse, AxiosResponse<newPet.CreateMutationResponse>, newPet.CreateMutationRequest>({
            method: 'POST',
            url: \`/user\`,
            data,
            ...requestConfig
        })
        return res.data
    }
}

export const userService = new UserService;
"
`;

exports[`RequestGenerator > requestType common getFullText 1`] = `
"import type { Pet } from "./pet.type";
import { request } from "@/utils/request";
import type { AxiosRequestConfig } from "axios";

/**
 * @tag pet
 * @description Everything about your Pets
 */
class PetService {
    /**
     * @summary summary
     */
    async testPost(data: Pet.TestPostMutationRequest, requestConfig?: Partial<AxiosRequestConfig<Pet.TestPostMutationRequest>>) {
        const res = await request<Pet.TestPostMutationResponse>({
            method: 'POST',
            url: \`/pet/test\`,
            data,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary summary
     */
    async testPut(data: Pet.TestPutMutationRequest, requestConfig?: Partial<AxiosRequestConfig<Pet.TestPutMutationRequest>>) {
        const res = await request<Pet.TestPutMutationResponse>({
            method: 'PUT',
            url: \`/pet/test\`,
            data,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary summary
     */
    async delByTest(data: Pet.DelByTestMutationRequest, requestConfig?: Partial<AxiosRequestConfig<Pet.DelByTestMutationRequest>>) {
        const res = await request<Pet.DelByTestMutationResponse>({
            method: 'DELETE',
            url: \`/pet/test\`,
            data,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary summary
     */
    async testIdGet(testId: Pet.TestIdGetPathParams['testId'], params?: Pet.TestIdGetQueryParams, requestConfig?: Partial<AxiosRequestConfig>) {
        const res = await request<Pet.TestIdGetQueryResponse>({
            method: 'GET',
            url: \`/pet/test/\${testId}\`,
            params,
            ...requestConfig,
            paramsSerializer(params: Pet.TestIdGetQueryParams) {
                return qs.stringify(params)
            }
        })
        return res.data
    }

    /**
     * @summary uploads an image
     * @description pet
     */
    async uploadImagePost(petId: Pet.UploadImagePostPathParams['petId'], data: Pet.UploadImagePostMutationRequest, requestConfig?: Partial<AxiosRequestConfig<Pet.UploadImagePostMutationRequest>>) {
        const res = await request<Pet.UploadImagePostMutationResponse>({
            method: 'POST',
            headers: {
                'Content-Type': 'multipart/form-data'
            },
            url: \`/pet/\${petId}/uploadImage\`,
            data,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Add a new pet to the store
     */
    async create(data: Pet.CreateMutationRequest, requestConfig?: Partial<AxiosRequestConfig<Pet.CreateMutationRequest>>) {
        const res = await request<Pet.CreateMutationResponse>({
            method: 'POST',
            url: \`/pet\`,
            data,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Update an existing pet
     */
    async update(data: Pet.UpdateMutationRequest, requestConfig?: Partial<AxiosRequestConfig<Pet.UpdateMutationRequest>>) {
        const res = await request<Pet.UpdateMutationResponse>({
            method: 'PUT',
            url: \`/pet\`,
            data,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Finds Pets by status
     * @description Multiple status values can be provided with comma separated strings
     */
    async findByStatusGet(params: Pet.FindByStatusGetQueryParams, requestConfig?: Partial<AxiosRequestConfig>) {
        const res = await request<Pet.FindByStatusGetQueryResponse>({
            method: 'GET',
            url: \`/pet/findByStatus\`,
            params,
            ...requestConfig,
            paramsSerializer(params: Pet.FindByStatusGetQueryParams) {
                return qs.stringify(params)
            }
        })
        return res.data
    }

    /**
     * @summary Finds Pets by tags
     * @description Multiple tags can be provided with comma separated strings. Use tag1, tag2, tag3 for testing.
     */
    async findByTagsGet(params: Pet.FindByTagsGetQueryParams, requestConfig?: Partial<AxiosRequestConfig>) {
        const res = await request<Pet.FindByTagsGetQueryResponse>({
            method: 'GET',
            url: \`/pet/findByTags\`,
            params,
            ...requestConfig,
            paramsSerializer(params: Pet.FindByTagsGetQueryParams) {
                return qs.stringify(params)
            }
        })
        return res.data
    }

    /**
     * @summary Find pet by ID
     * @description Returns a single pet
     */
    async findByPetId(petId: Pet.FindByPetIdPathParams['petId'], requestConfig?: Partial<AxiosRequestConfig>) {
        const res = await request<Pet.FindByPetIdQueryResponse>({
            method: 'GET',
            url: \`/pet/\${petId}\`,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Updates a pet in the store with form data
     */
    async petIdPost(petId: Pet.PetIdPostPathParams['petId'], data: Pet.PetIdPostMutationRequest, requestConfig?: Partial<AxiosRequestConfig<Pet.PetIdPostMutationRequest>>) {
        const res = await request<Pet.PetIdPostMutationResponse>({
            method: 'POST',
            headers: {
                'Content-Type': 'application/x-www-form-urlencoded'
            },
            url: \`/pet/\${petId}\`,
            data,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Deletes a pet
     */
    async delByPetId(petId: Pet.DelByPetIdPathParams['petId'], requestConfig?: Partial<AxiosRequestConfig>) {
        const res = await request<Pet.DelByPetIdMutationResponse>({
            method: 'DELETE',
            url: \`/pet/\${petId}\`,
            ...requestConfig
        })
        return res.data
    }
}

export const petService = new PetService;

import type { Store } from "./store.type";
import { request } from "@/utils/request";
import type { AxiosRequestConfig } from "axios";

/**
 * @tag store
 * @description Access to Petstore orders
 */
class StoreService {
    /**
     * @summary Place an order for a pet
     */
    async create(data: Store.CreateMutationRequest, requestConfig?: Partial<AxiosRequestConfig<Store.CreateMutationRequest>>) {
        const res = await request<Store.CreateMutationResponse>({
            method: 'POST',
            url: \`/store/order\`,
            data,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Find purchase order by ID
     * @description For valid response try integer IDs with value >= 1 and <= 10. Other values will generated exceptions
     */
    async findByOrderId(orderId: Store.FindByOrderIdPathParams['orderId'], requestConfig?: Partial<AxiosRequestConfig>) {
        const res = await request<Store.FindByOrderIdQueryResponse>({
            method: 'GET',
            url: \`/store/order/\${orderId}\`,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Delete purchase order by ID
     * @description For valid response try integer IDs with positive integer value. Negative or non-integer values will generate API errors
     */
    async delByOrderId(orderId: Store.DelByOrderIdPathParams['orderId'], requestConfig?: Partial<AxiosRequestConfig>) {
        const res = await request<Store.DelByOrderIdMutationResponse>({
            method: 'DELETE',
            url: \`/store/order/\${orderId}\`,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Returns pet inventories by status
     * @description Returns a map of status codes to quantities
     */
    async inventoryGet(requestConfig?: Partial<AxiosRequestConfig>) {
        const res = await request<Store.InventoryGetQueryResponse>({
            method: 'GET',
            url: \`/store/inventory\`,
            ...requestConfig
        })
        return res.data
    }
}

export const storeService = new StoreService;

import type { User } from "./user.type";
import { request } from "@/utils/request";
import type { AxiosRequestConfig } from "axios";

/**
 * @tag user
 * @description Operations about user
 */
class UserService {
    /**
     * @summary Creates list of users with given input array
     */
    async createWithArrayPost(data: User.CreateWithArrayPostMutationRequest, requestConfig?: Partial<AxiosRequestConfig<User.CreateWithArrayPostMutationRequest>>) {
        const res = await request<User.CreateWithArrayPostMutationResponse>({
            method: 'POST',
            url: \`/user/createWithArray\`,
            data,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Creates list of users with given input array
     */
    async createWithListPost(data: User.CreateWithListPostMutationRequest, requestConfig?: Partial<AxiosRequestConfig<User.CreateWithListPostMutationRequest>>) {
        const res = await request<User.CreateWithListPostMutationResponse>({
            method: 'POST',
            url: \`/user/createWithList\`,
            data,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Get user by user name
     */
    async findByUsername(username: User.FindByUsernamePathParams['username'], requestConfig?: Partial<AxiosRequestConfig>) {
        const res = await request<User.FindByUsernameQueryResponse>({
            method: 'GET',
            url: \`/user/\${username}\`,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Updated user
     * @description This can only be done by the logged in user.
     */
    async usernamePut(username: User.UsernamePutPathParams['username'], data: User.UsernamePutMutationRequest, requestConfig?: Partial<AxiosRequestConfig<User.UsernamePutMutationRequest>>) {
        const res = await request<User.UsernamePutMutationResponse>({
            method: 'PUT',
            url: \`/user/\${username}\`,
            data,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Delete user
     * @description This can only be done by the logged in user.
     */
    async delByUsername(username: User.DelByUsernamePathParams['username'], requestConfig?: Partial<AxiosRequestConfig>) {
        const res = await request<User.DelByUsernameMutationResponse>({
            method: 'DELETE',
            url: \`/user/\${username}\`,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Logs user into the system
     */
    async loginGet(params: User.LoginGetQueryParams, requestConfig?: Partial<AxiosRequestConfig>) {
        const res = await request<User.LoginGetQueryResponse>({
            method: 'GET',
            url: \`/user/login\`,
            params,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Logs out current logged in user session
     */
    async logoutGet(requestConfig?: Partial<AxiosRequestConfig>) {
        const res = await request<User.LogoutGetQueryResponse>({
            method: 'GET',
            url: \`/user/logout\`,
            ...requestConfig
        })
        return res.data
    }

    /**
     * @summary Create user
     * @description This can only be done by the logged in user.
     */
    async create(data: User.CreateMutationRequest, requestConfig?: Partial<AxiosRequestConfig<User.CreateMutationRequest>>) {
        const res = await request<User.CreateMutationResponse>({
            method: 'POST',
            url: \`/user\`,
            data,
            ...requestConfig
        })
        return res.data
    }
}

export const userService = new UserService;
"
`;

exports[`RequestGenerator > requestType commonWithArrayResponse getFullText 1`] = `
"import type { Pet } from "./pet.type";
import { request } from "@/utils/request";
import type { AxiosRequestConfig } from "axios";

/**
 * @tag pet
 * @description Everything about your Pets
 */
class PetService {
    /**
     * @summary summary
     */
    testPost(data: Pet.TestPostMutationRequest, requestConfig?: Partial<AxiosRequestConfig<Pet.TestPostMutationRequest>>) {
        return request<Pet.TestPostMutationResponse>({
            method: 'POST',
            url: \`/pet/test\`,
            data,
            ...requestConfig
        })
            .then(
                res => [undefined, res.data],
                rej => [rej, undefined]
            )
    }

    /**
     * @summary summary
     */
    testPut(data: Pet.TestPutMutationRequest, requestConfig?: Partial<AxiosRequestConfig<Pet.TestPutMutationRequest>>) {
        return request<Pet.TestPutMutationResponse>({
            method: 'PUT',
            url: \`/pet/test\`,
            data,
            ...requestConfig
        })
            .then(
                res => [undefined, res.data],
                rej => [rej, undefined]
            )
    }

    /**
     * @summary summary
     */
    delByTest(data: Pet.DelByTestMutationRequest, requestConfig?: Partial<AxiosRequestConfig<Pet.DelByTestMutationRequest>>) {
        return request<Pet.DelByTestMutationResponse>({
            method: 'DELETE',
            url: \`/pet/test\`,
            data,
            ...requestConfig
        })
            .then(
                res => [undefined, res.data],
                rej => [rej, undefined]
            )
    }

    /**
     * @summary summary
     */
    testIdGet(testId: Pet.TestIdGetPathParams['testId'], params?: Pet.TestIdGetQueryParams, requestConfig?: Partial<AxiosRequestConfig>) {
        return request<Pet.TestIdGetQueryResponse>({
            method: 'GET',
            url: \`/pet/test/\${testId}\`,
            params,
            ...requestConfig,
            paramsSerializer(params: Pet.TestIdGetQueryParams) {
                return qs.stringify(params)
            }
        })
            .then(
                res => [undefined, res.data],
                rej => [rej, undefined]
            )
    }

    /**
     * @summary uploads an image
     * @description pet
     */
    uploadImagePost(petId: Pet.UploadImagePostPathParams['petId'], data: Pet.UploadImagePostMutationRequest, requestConfig?: Partial<AxiosRequestConfig<Pet.UploadImagePostMutationRequest>>) {
        return request<Pet.UploadImagePostMutationResponse>({
            method: 'POST',
            headers: {
                'Content-Type': 'multipart/form-data'
            },
            url: \`/pet/\${petId}/uploadImage\`,
            data,
            ...requestConfig
        })
            .then(
                res => [undefined, res.data],
                rej => [rej, undefined]
            )
    }

    /**
     * @summary Add a new pet to the store
     */
    create(data: Pet.CreateMutationRequest, requestConfig?: Partial<AxiosRequestConfig<Pet.CreateMutationRequest>>) {
        return request<Pet.CreateMutationResponse>({
            method: 'POST',
            url: \`/pet\`,
            data,
            ...requestConfig
        })
            .then(
                res => [undefined, res.data],
                rej => [rej, undefined]
            )
    }

    /**
     * @summary Update an existing pet
     */
    update(data: Pet.UpdateMutationRequest, requestConfig?: Partial<AxiosRequestConfig<Pet.UpdateMutationRequest>>) {
        return request<Pet.UpdateMutationResponse>({
            method: 'PUT',
            url: \`/pet\`,
            data,
            ...requestConfig
        })
            .then(
                res => [undefined, res.data],
                rej => [rej, undefined]
            )
    }

    /**
     * @summary Finds Pets by status
     * @description Multiple status values can be provided with comma separated strings
     */
    findByStatusGet(params: Pet.FindByStatusGetQueryParams, requestConfig?: Partial<AxiosRequestConfig>) {
        return request<Pet.FindByStatusGetQueryResponse>({
            method: 'GET',
            url: \`/pet/findByStatus\`,
            params,
            ...requestConfig,
            paramsSerializer(params: Pet.FindByStatusGetQueryParams) {
                return qs.stringify(params)
            }
        })
            .then(
                res => [undefined, res.data],
                rej => [rej, undefined]
            )
    }

    /**
     * @summary Finds Pets by tags
     * @description Multiple tags can be provided with comma separated strings. Use tag1, tag2, tag3 for testing.
     */
    findByTagsGet(params: Pet.FindByTagsGetQueryParams, requestConfig?: Partial<AxiosRequestConfig>) {
        return request<Pet.FindByTagsGetQueryResponse>({
            method: 'GET',
            url: \`/pet/findByTags\`,
            params,
            ...requestConfig,
            paramsSerializer(params: Pet.FindByTagsGetQueryParams) {
                return qs.stringify(params)
            }
        })
            .then(
                res => [undefined, res.data],
                rej => [rej, undefined]
            )
    }

    /**
     * @summary Find pet by ID
     * @description Returns a single pet
     */
    findByPetId(petId: Pet.FindByPetIdPathParams['petId'], requestConfig?: Partial<AxiosRequestConfig>) {
        return request<Pet.FindByPetIdQueryResponse>({
            method: 'GET',
            url: \`/pet/\${petId}\`,
            ...requestConfig
        })
            .then(
                res => [undefined, res.data],
                rej => [rej, undefined]
            )
    }

    /**
     * @summary Updates a pet in the store with form data
     */
    petIdPost(petId: Pet.PetIdPostPathParams['petId'], data: Pet.PetIdPostMutationRequest, requestConfig?: Partial<AxiosRequestConfig<Pet.PetIdPostMutationRequest>>) {
        return request<Pet.PetIdPostMutationResponse>({
            method: 'POST',
            headers: {
                'Content-Type': 'application/x-www-form-urlencoded'
            },
            url: \`/pet/\${petId}\`,
            data,
            ...requestConfig
        })
            .then(
                res => [undefined, res.data],
                rej => [rej, undefined]
            )
    }

    /**
     * @summary Deletes a pet
     */
    delByPetId(petId: Pet.DelByPetIdPathParams['petId'], requestConfig?: Partial<AxiosRequestConfig>) {
        return request<Pet.DelByPetIdMutationResponse>({
            method: 'DELETE',
            url: \`/pet/\${petId}\`,
            ...requestConfig
        })
            .then(
                res => [undefined, res.data],
                rej => [rej, undefined]
            )
    }
}

export const petService = new PetService;

import type { Store } from "./store.type";
import { request } from "@/utils/request";
import type { AxiosRequestConfig } from "axios";

/**
 * @tag store
 * @description Access to Petstore orders
 */
class StoreService {
    /**
     * @summary Place an order for a pet
     */
    create(data: Store.CreateMutationRequest, requestConfig?: Partial<AxiosRequestConfig<Store.CreateMutationRequest>>) {
        return request<Store.CreateMutationResponse>({
            method: 'POST',
            url: \`/store/order\`,
            data,
            ...requestConfig
        })
            .then(
                res => [undefined, res.data],
                rej => [rej, undefined]
            )
    }

    /**
     * @summary Find purchase order by ID
     * @description For valid response try integer IDs with value >= 1 and <= 10. Other values will generated exceptions
     */
    findByOrderId(orderId: Store.FindByOrderIdPathParams['orderId'], requestConfig?: Partial<AxiosRequestConfig>) {
        return request<Store.FindByOrderIdQueryResponse>({
            method: 'GET',
            url: \`/store/order/\${orderId}\`,
            ...requestConfig
        })
            .then(
                res => [undefined, res.data],
                rej => [rej, undefined]
            )
    }

    /**
     * @summary Delete purchase order by ID
     * @description For valid response try integer IDs with positive integer value. Negative or non-integer values will generate API errors
     */
    delByOrderId(orderId: Store.DelByOrderIdPathParams['orderId'], requestConfig?: Partial<AxiosRequestConfig>) {
        return request<Store.DelByOrderIdMutationResponse>({
            method: 'DELETE',
            url: \`/store/order/\${orderId}\`,
            ...requestConfig
        })
            .then(
                res => [undefined, res.data],
                rej => [rej, undefined]
            )
    }

    /**
     * @summary Returns pet inventories by status
     * @description Returns a map of status codes to quantities
     */
    inventoryGet(requestConfig?: Partial<AxiosRequestConfig>) {
        return request<Store.InventoryGetQueryResponse>({
            method: 'GET',
            url: \`/store/inventory\`,
            ...requestConfig
        })
            .then(
                res => [undefined, res.data],
                rej => [rej, undefined]
            )
    }
}

export const storeService = new StoreService;

import type { User } from "./user.type";
import { request } from "@/utils/request";
import type { AxiosRequestConfig } from "axios";

/**
 * @tag user
 * @description Operations about user
 */
class UserService {
    /**
     * @summary Creates list of users with given input array
     */
    createWithArrayPost(data: User.CreateWithArrayPostMutationRequest, requestConfig?: Partial<AxiosRequestConfig<User.CreateWithArrayPostMutationRequest>>) {
        return request<User.CreateWithArrayPostMutationResponse>({
            method: 'POST',
            url: \`/user/createWithArray\`,
            data,
            ...requestConfig
        })
            .then(
                res => [undefined, res.data],
                rej => [rej, undefined]
            )
    }

    /**
     * @summary Creates list of users with given input array
     */
    createWithListPost(data: User.CreateWithListPostMutationRequest, requestConfig?: Partial<AxiosRequestConfig<User.CreateWithListPostMutationRequest>>) {
        return request<User.CreateWithListPostMutationResponse>({
            method: 'POST',
            url: \`/user/createWithList\`,
            data,
            ...requestConfig
        })
            .then(
                res => [undefined, res.data],
                rej => [rej, undefined]
            )
    }

    /**
     * @summary Get user by user name
     */
    findByUsername(username: User.FindByUsernamePathParams['username'], requestConfig?: Partial<AxiosRequestConfig>) {
        return request<User.FindByUsernameQueryResponse>({
            method: 'GET',
            url: \`/user/\${username}\`,
            ...requestConfig
        })
            .then(
                res => [undefined, res.data],
                rej => [rej, undefined]
            )
    }

    /**
     * @summary Updated user
     * @description This can only be done by the logged in user.
     */
    usernamePut(username: User.UsernamePutPathParams['username'], data: User.UsernamePutMutationRequest, requestConfig?: Partial<AxiosRequestConfig<User.UsernamePutMutationRequest>>) {
        return request<User.UsernamePutMutationResponse>({
            method: 'PUT',
            url: \`/user/\${username}\`,
            data,
            ...requestConfig
        })
            .then(
                res => [undefined, res.data],
                rej => [rej, undefined]
            )
    }

    /**
     * @summary Delete user
     * @description This can only be done by the logged in user.
     */
    delByUsername(username: User.DelByUsernamePathParams['username'], requestConfig?: Partial<AxiosRequestConfig>) {
        return request<User.DelByUsernameMutationResponse>({
            method: 'DELETE',
            url: \`/user/\${username}\`,
            ...requestConfig
        })
            .then(
                res => [undefined, res.data],
                rej => [rej, undefined]
            )
    }

    /**
     * @summary Logs user into the system
     */
    loginGet(params: User.LoginGetQueryParams, requestConfig?: Partial<AxiosRequestConfig>) {
        return request<User.LoginGetQueryResponse>({
            method: 'GET',
            url: \`/user/login\`,
            params,
            ...requestConfig
        })
            .then(
                res => [undefined, res.data],
                rej => [rej, undefined]
            )
    }

    /**
     * @summary Logs out current logged in user session
     */
    logoutGet(requestConfig?: Partial<AxiosRequestConfig>) {
        return request<User.LogoutGetQueryResponse>({
            method: 'GET',
            url: \`/user/logout\`,
            ...requestConfig
        })
            .then(
                res => [undefined, res.data],
                rej => [rej, undefined]
            )
    }

    /**
     * @summary Create user
     * @description This can only be done by the logged in user.
     */
    create(data: User.CreateMutationRequest, requestConfig?: Partial<AxiosRequestConfig<User.CreateMutationRequest>>) {
        return request<User.CreateMutationResponse>({
            method: 'POST',
            url: \`/user\`,
            data,
            ...requestConfig
        })
            .then(
                res => [undefined, res.data],
                rej => [rej, undefined]
            )
    }
}

export const userService = new UserService;
"
`;
